--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,4 +1,4 @@
-altgraph==0.17.2
+altgraph @ file:///AppleInternal/Library/BuildRoots/860631e9-c1c5-11ee-98ee-b6ef2fd8d87b/Library/Caches/com.apple.xbs/Sources/python3/altgraph-0.17.2-py2.py3-none-any.whl
 arrow==1.3.0
 asgiref==3.8.1
 binaryornot==0.4.4
@@ -9,10 +9,10 @@ click==8.1.7
 cookiecutter==2.6.0
 Django==4.2.16
 django-tailwind==3.6.0
-future==0.18.2
+future @ file:///AppleInternal/Library/BuildRoots/860631e9-c1c5-11ee-98ee-b6ef2fd8d87b/Library/Caches/com.apple.xbs/Sources/python3/future-0.18.2-py3-none-any.whl
 idna==3.10
 Jinja2==3.1.4
-macholib==1.15.2
+macholib @ file:///AppleInternal/Library/BuildRoots/860631e9-c1c5-11ee-98ee-b6ef2fd8d87b/Library/Caches/com.apple.xbs/Sources/python3/macholib-1.15.2-py2.py3-none-any.whl
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
@@ -23,7 +23,7 @@ python-slugify==8.0.4
 PyYAML==6.0.2
 requests==2.32.3
 rich==13.9.4
-six==1.15.0
+six @ file:///AppleInternal/Library/BuildRoots/860631e9-c1c5-11ee-98ee-b6ef2fd8d87b/Library/Caches/com.apple.xbs/Sources/python3/six-1.15.0-py2.py3-none-any.whl
 sqlparse==0.5.2
 text-unidecode==1.3
 types-python-dateutil==2.9.0.20241206
